oxiplate-derive/tests/broken/string-continuation-span.stderr
error: Expected an expression.
 --> tests/broken/string-continuation-span.rs:5:6
  |
5 |     {{")]
  |      ^
